# 6502-CPU-Emulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: 6502_emulator.hpp
src/: main.cpp
